# semantyX

./: README.md
semantic_inference/: CMakeLists.txt
semantic_inference/include/semantic_inference/: image_recolor.h
semantic_inference/src/: image_recolor.cpp
semantic_inference_msgs/: CMakeLists.txt
semantic_inference_ros/: CMakeLists.txt  package.xml
semantic_inference_ros/config/label_groupings/: ade20k_custom.yaml
semantic_inference_ros/config/models/: ade20k-efficientvit_seg_l2.yaml  ade20k-hrnetv2-c1.yaml  ade20k-mobilenetv2dilated-c1_deepsup.yaml
semantic_inference_ros/include/semantic_inference_ros/: segmentator_node.hpp
semantic_inference_ros/launch/: semantic_inference.launch.py  semantic_inference.launch.yaml
semantic_inference_ros/src/: segmentator_node.cpp
